--- a/index.html
+++ b/index.html
@@ -699,15 +699,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>React</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>PHP</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>SQL</button>
             </li>
 
           </ul>
@@ -731,15 +731,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>React</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>PHP</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>SQL</button>
               </li>
 
             </ul>
@@ -748,43 +748,55 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://git-trands.vercel.app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/Git-Trands.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Git-Trands</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">About
+                  GitHub Explorer, built with Vite & Tailwind showcases top-rated and trending repositories. Visualize
+                  commit
+                  activities with graphs, and explore profiles using the GitHub Profile Finder. Discover the vibrant
+                  GitHub community effortlessly.</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://convert-verse.vercel.app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/convertverse.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">ConvertVerse</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">
+
+
+                  ConvertVerse, built with React and Bootstrap, simplifies conversions and computations. Explore tools
+                  for BMI, interest, unit, and currency calculations, along with QR code generation. Enjoy additional
+                  features like string manipulation and image operations. Refresh the page for a new inspiring quote and
+                  discover the all-in-one solution for your computational needs effortlessly
+
+                </p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="React">
               <a href="#">
 
                 <figure class="project-img">
@@ -797,12 +809,12 @@
 
                 <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">React</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="PHP">
               <a href="#">
 
                 <figure class="project-img">
@@ -813,14 +825,14 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">PHP</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">PHP</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="SQL">
               <a href="#">
 
                 <figure class="project-img">
@@ -831,14 +843,14 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">SQL</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">SQL</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="React">
               <a href="#">
 
                 <figure class="project-img">
@@ -849,14 +861,14 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">React</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">React</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="SQL">
               <a href="#">
 
                 <figure class="project-img">
@@ -869,12 +881,12 @@
 
                 <h3 class="project-title">Summary</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">SQL</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="React">
               <a href="#">
 
                 <figure class="project-img">
@@ -887,12 +899,12 @@
 
                 <h3 class="project-title">Task Manager</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">React</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="SQL">
               <a href="#">
 
                 <figure class="project-img">
@@ -905,7 +917,7 @@
 
                 <h3 class="project-title">Arrival</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">SQL</p>
 
               </a>
             </li>
