--- a/index.html
+++ b/index.html
@@ -710,6 +710,10 @@
               <button data-filter-btn>SQL</button>
             </li>
 
+            <li class="filter-item">
+              <button data-filter-btn>jQuery</button>
+            </li>
+
           </ul>
 
           <div class="filter-select-box">
@@ -740,6 +744,9 @@
 
               <li class="select-item">
                 <button data-select-item>SQL</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>jQuery</button>
               </li>
 
             </ul>
@@ -918,6 +925,27 @@
                 <h3 class="project-title">Arrival</h3>
 
                 <p class="project-category">SQL</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="jQuery">
+              <a href="https://registration-form-using-j-query.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/regitratio form jquery.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Registration Form</h3>
+
+                <p class="project-category">This project uses jQuery and Bootstrap for client-side form validation. It
+                  enforces mandatory fields, restricts name characters, ensures correct email format, matches passwords,
+                  and limits profile picture uploads to jpg/png/jpeg under 1 MB. Dynamic class updates occur when the
+                  department changes, providing interactive validation feedback.</p>
 
               </a>
             </li>
