changes in portfolio

--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rachhadiya Yash</title>
 
-  <!--
-    - favicon
-  -->
+  <!--favicon-->
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
-  <!--
-    - custom css link
-  -->
+  <!--custom css link-->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--
-    - google font link
-  -->
+  <!--google font link-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -27,27 +21,21 @@
 
 <body>
 
-  <!--- #MAIN-->
   <main>
-
     <!--- #SIDEBAR -->
-
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
           <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
         </figure>
-
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Yash Rachhadiya</h1>
           <p class="title">Web developer</p>
         </div>
-
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
           <ion-icon name="chevron-down"></ion-icon>
         </button>
-
       </div>
 
       <div class="sidebar-info_more">
@@ -69,7 +57,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+12133522795" class="contact-link">+91 72850 56777</a>
+              <a href="+917285056777" class="contact-link">+91 72850 56777</a>
             </div>
           </li>
 
@@ -99,37 +87,20 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-
+            <a href="https://www.linkedin.com/in/rachhadiya-yash-569a9724a/" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
-
-
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <!-- GitHub Logo Icon -->
+            <a href="https://github.com/RachhadiyaYash" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
-
             </a>
           </li>
-
-
-
         </ul>
-
       </div>
 
     </aside>
-
-
-
-
-
-    <!--
-      - #main-content
-    -->
 
     <div class="main-content">
 
@@ -707,10 +678,6 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>SQL</button>
-            </li>
-
-            <li class="filter-item">
               <button data-filter-btn>jQuery</button>
             </li>
 
@@ -743,9 +710,6 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>SQL</button>
-              </li>
-              <li class="select-item">
                 <button data-select-item>jQuery</button>
               </li>
 
@@ -777,6 +741,28 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="PHP">
+              <a href="https://github.com/RachhadiyaYash/User-Registration-Management-System" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/userdata.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">User Registration Management System</h3>
+
+                <p class="project-category">
+
+                  The User Registration and Management System is a web application developed using PHP, HTML, CSS,
+                  JavaScript (jQuery), and Bootstrap, with MySQL as the database. It features user registration and
+                  profile management, while administrators can manage user records. The application utilizes AJAX for a
+                  dynamic user experience and employs prepared statements to ensure database security.
+                </p>
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="React">
               <a href="https://convert-verse.vercel.app/" target="_blank">
 
@@ -803,140 +789,12 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="React">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Fundo</h3>
-
-                <p class="project-category">React</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="PHP">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">PHP</h3>
-
-                <p class="project-category">PHP</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="SQL">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
-                </figure>
-
-                <h3 class="project-title">SQL</h3>
-
-                <p class="project-category">SQL</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="React">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">React</h3>
-
-                <p class="project-category">React</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="SQL">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Summary</h3>
-
-                <p class="project-category">SQL</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="React">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">React</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="SQL">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">SQL</p>
-
-              </a>
-            </li>
-
             <li class="project-item  active" data-filter-item data-category="jQuery">
               <a href="https://registration-form-using-j-query.vercel.app/" target="_blank">
-
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-
                   <img src="./assets/images/regitratio form jquery.png" alt="arrival" loading="lazy">
                 </figure>
 
@@ -949,6 +807,7 @@
 
               </a>
             </li>
+
 
           </ul>
 
