--- a/index.html
+++ b/index.html
@@ -763,6 +763,27 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="PHP">
+              <a href="https://github.com/RachhadiyaYash/stock-management-system" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/STOCK-SYSTEM.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Retail Shop Stock Management System</h3>
+
+                <p class="project-category">
+                  The Stock Management System is a web-based application I developed to efficiently manage inventory and
+                  sales for retail businesses. It includes features like secure user login, stock tracking, and
+                  automated billing, all within a user-friendly, responsive design. Built using PHP, MySQL, and
+                  Bootstrap, the system is designed to be easily customizable and scalable.y.
+                </p>
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="React">
               <a href="https://convert-verse.vercel.app/" target="_blank">
 
