updates new project

--- a/index.html
+++ b/index.html
@@ -680,7 +680,9 @@
             <li class="filter-item">
               <button data-filter-btn>jQuery</button>
             </li>
-
+            <li class="select-item">
+              <button data-select-item>JavaScript</button>
+            </li>
           </ul>
 
           <div class="filter-select-box">
@@ -712,6 +714,9 @@
               <li class="select-item">
                 <button data-select-item>jQuery</button>
               </li>
+              <li class="select-item">
+                <button data-select-item>JavaScript</button>
+              </li>
 
             </ul>
 
@@ -737,6 +742,28 @@
                   commit
                   activities with graphs, and explore profiles using the GitHub Profile Finder. Discover the vibrant
                   GitHub community effortlessly.</p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="JavaScript">
+              <a href="https://password-generator-git-main-yash-rachhadiyas-projects.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/password generator.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Password Generator</h3>
+
+                <p class="project-category">About
+                  Password Generator, built with HTML, JavaScript, and Tailwind CSS, offers an intuitive interface for
+                  creating secure passwords. Customize your password’s length and complexity with easy-to-use sliders
+                  and toggle switches. Generate and copy passwords effortlessly while enjoying a responsive design that
+                  adapts to any device. Enhance your security with this simple yet powerful tool.</p>
+
 
               </a>
             </li>
