updates in projects

--- a/index.html
+++ b/index.html
@@ -790,6 +790,26 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://app-integration-page-rnyg.vercel.app/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/app integratiosn.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">App Integration Page</h3>
+
+                <p class="project-category">
+                  A responsive web app built with React, Tailwind CSS, and Vite. Features include dynamic card display,
+                  category filtering, search functionality, and local storage for persistent card highlighting. Ideal
+                  for showcasing apps with a user-friendly interface and consistent state management.
+                </p>
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="PHP">
               <a href="https://github.com/RachhadiyaYash/stock-management-system" target="_blank">
 
