updates in projects

--- a/index.html
+++ b/index.html
@@ -875,7 +875,26 @@
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="JavaScript">
+              <a href="https://rachhadiyayash.github.io/Guess-the-number/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/guess the number.png" alt="arrival" loading="lazy">
+                </figure>
 
+                <h3 class="project-title">Guess the number</h3>
+
+                <p class="project-category">The "Guess the Number" game is an engaging and interactive web application
+                  where players aim to guess a hidden number. The game is designed to offer real-time feedback on
+                  guesses, helping users adjust their strategy to identify the number. With a built-in scoring system,
+                  players can track their current score and strive to beat the high score. This project showcases my
+                  ability to create interactive web applications with a focus on user experience, feedback mechanisms,
+                  and scoring functionality. </p>
+
+              </a>
+            </li>
 
           </ul>
 
