--- a/index.html
+++ b/index.html
@@ -893,7 +893,23 @@
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://tip-calculator-lovat-one.vercel.app/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/Tip calculator.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Tip Calculator</h3>
 
+                <p class="project-category">A responsive tip calculation app that simplifies bill splitting. Built with
+                  React and Tailwind CSS, the app is optimized for different screen sizes and offers a user-friendly
+                  experience. Perfect for quick calculations.
+                </p>
+
+              </a>
+            </li>
           </ul>
 
         </section>
