--- a/index.html
+++ b/index.html
@@ -674,12 +674,13 @@
             <li class="filter-item">
               <button data-filter-btn>PHP</button>
             </li>
-
             <li class="filter-item">
               <button data-filter-btn>jQuery</button>
             </li>
-            <li class="select-item">
-              <button data-select-item>JavaScript</button>
+            <li class="filter-item"> <button data-select-item>JavaScript</button>
+            </li>
+            <li class="filter-item">
+              <button data-select-item>React Components</button>
             </li>
           </ul>
 
@@ -715,7 +716,9 @@
               <li class="select-item">
                 <button data-select-item>JavaScript</button>
               </li>
-
+              <li class="select-item">
+                <button data-select-item>React Components</button>
+              </li>
             </ul>
 
           </div>
@@ -788,7 +791,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="React">
+            <li class="project-item  active" data-filter-item data-category="React Components">
               <a href="https://app-integration-page-rnyg.vercel.app/" target="_blank">
 
                 <figure class="project-img">
@@ -906,6 +909,24 @@
                 <p class="project-category">A responsive tip calculation app that simplifies bill splitting. Built with
                   React and Tailwind CSS, the app is optimized for different screen sizes and offers a user-friendly
                   experience. Perfect for quick calculations.
+                </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="React Components">
+              <a href="https://login-page-gamma-fawn.vercel.app/" target=" _blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/loginpage.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Login & Register pages</h3>
+
+                <p class="project-category">
+                  A responsive login and registration form built with React and Vite, styled using Tailwind CSS. The app
+                  leverages Formik and Yup for form validation, with Framer Motion providing smooth animations, and is
+                  fully optimized for different screen sizes.
                 </p>
 
               </a>
