--- a/index.html
+++ b/index.html
@@ -931,6 +931,25 @@
 
               </a>
             </li>
+            <li class="project-item  active" data-filter-item data-category="React">
+              <a href="https://job-board-gamma-ten.vercel.app/" target=" _blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/job board.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Job Board</h3>
+
+                <p class="project-category">
+                  Developed a job board with Tailwind CSS and React using Vite, featuring job cards and detailed views.
+                  The platform includes search filters by job position and location, and a feature to find jobs near the
+                  user's current location. While optimized for desktop, the site will be enhanced for mobile
+                  responsiveness soon.
+                </p>
+
+              </a>
+            </li>
           </ul>
 
         </section>
