--- a/index.html
+++ b/index.html
@@ -896,6 +896,26 @@
 
               </a>
             </li>
+
+
+            <li class="project-item  active" data-filter-item data-category="React Components"></li>
+            <a href="https://newsletter-page-lake.vercel.app/" target="_blank">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+                <img src="./assets/images/newslatter.png" alt="arrival" loading="lazy">
+              </figure>
+
+              <h3 class="project-title">Newsletter Page</h3>
+
+              <p class="project-category">This Newsletter Signup component showcases a clean and responsive design using
+                React and Tailwind CSS. It features form validation with Yup and interactive elements styled with custom
+                colors. The component provides users with a seamless subscription experience, including toast
+                notifications for successful submissions, and is optimized for both desktop and mobile screens. </p>
+
+            </a>
+            </li>
             <li class="project-item  active" data-filter-item data-category="React">
               <a href="https://tip-calculator-lovat-one.vercel.app/" target="_blank">
                 <figure class="project-img">
@@ -931,30 +951,7 @@
 
               </a>
             </li>
-            <!-- <li class="project-item  active" data-filter-item data-category="React">
-              <a href="https://job-board-gamma-ten.vercel.app/" target=" _blank">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="./assets/images/job board.png" alt="arrival" loading="lazy">
-                </figure>
-                <h3 class="project-title">Job Board</h3>
 
-                <p class="project-category">
-                  Developed a job board with Tailwind CSS and React using Vite, featuring job cards and detailed views.
-                  The platform includes search filters by job position and location, and a feature to find jobs near the
-                  user's current location. While optimized for desktop, the site will be enhanced for mobile
-                  responsiveness soon.
-                </p>
-                <p>For the best experience when visiting this job board on a mobile
-                  device, switch to landscape mode and enable "Desktop Site" mode in your browser settings. This setup
-                  provides a more optimal view, similar to the desktop layout, while mobile responsiveness improvements
-                  are in progress.</p>
-
-
-              </a>
-            </li> -->
             <li class="project-item active" data-filter-item data-category="React">
               <a href="https://job-board-gamma-ten.vercel.app/" target="_blank">
                 <figure class="project-img">
