--- a/index.html
+++ b/index.html
@@ -898,23 +898,25 @@
             </li>
 
 
-            <li class="project-item  active" data-filter-item data-category="React Components"></li>
-            <a href="https://newsletter-page-lake.vercel.app/" target="_blank">
-              <figure class="project-img">
-                <div class="project-item-icon-box">
-                  <ion-icon name="eye-outline"></ion-icon>
-                </div>
-                <img src="./assets/images/newslatter.png" alt="arrival" loading="lazy">
-              </figure>
+            <li class="project-item  active" data-filter-item data-category="React Components">
+              <a href="https://newsletter-page-lake.vercel.app/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/newslatter.png" alt="arrival" loading="lazy">
+                </figure>
 
-              <h3 class="project-title">Newsletter Page</h3>
+                <h3 class="project-title">Newsletter Page</h3>
 
-              <p class="project-category">This Newsletter Signup component showcases a clean and responsive design using
-                React and Tailwind CSS. It features form validation with Yup and interactive elements styled with custom
-                colors. The component provides users with a seamless subscription experience, including toast
-                notifications for successful submissions, and is optimized for both desktop and mobile screens. </p>
+                <p class="project-category">This Newsletter Signup component showcases a clean and responsive design
+                  using
+                  React and Tailwind CSS. It features form validation with Yup and interactive elements styled with
+                  custom
+                  colors. The component provides users with a seamless subscription experience, including toast
+                  notifications for successful submissions, and is optimized for both desktop and mobile screens. </p>
 
-            </a>
+              </a>
             </li>
             <li class="project-item  active" data-filter-item data-category="React">
               <a href="https://tip-calculator-lovat-one.vercel.app/" target="_blank">
