--- a/index.html
+++ b/index.html
@@ -963,7 +963,6 @@
                   <img src="./assets/images/job board.png" alt="arrival" loading="lazy">
                 </figure>
                 <h3 class="project-title">Job Board</h3>
-
                 <p class="project-category">
                   Developed a job board with Tailwind CSS and React using Vite, featuring job cards and detailed views.
                   The platform includes search filters by job position and location, and a feature to find jobs near the
@@ -972,16 +971,48 @@
                   For the best experience, switch to landscape mode and enable
                   "Desktop Site" mode on mobile for an
                   optimal view
-
-
                 </p>
-
-
               </a>
-
+            </li>
+            <li class="project-item active" data-filter-item data-category="React">
+              <a href="https://job-board-gamma-ten.vercel.app/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/job board.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Job Board</h3>
+                <p class="project-category">
+                  Developed a job board with Tailwind CSS and React using Vite, featuring job cards and detailed views.
+                  The platform includes search filters by job position and location, and a feature to find jobs near the
+                  user's current location. While optimized for desktop, the site will be enhanced for mobile
+                  responsiveness soon.
+                  For the best experience, switch to landscape mode and enable
+                  "Desktop Site" mode on mobile for an
+                  optimal view
+                </p>
+              </a>
             </li>
 
 
+            <li class="project-item active" data-filter-item data-category="React Components">
+              <a href="https://feature-section-sigma.vercel.app/" target="_blank">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/feature.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title">Feature Card</h3>
+                <p class="project-category">
+                  This project showcases a responsive Feature Section built with React and Tailwind CSS. It features an
+                  auto-scrolling slider on mobile devices and a grid layout on larger screens. Data is dynamically
+                  loaded from a JSON file, and the design includes smooth animations and hover effects to enhance user
+                  interaction.
+                </p>
+              </a>
+            </li>
           </ul>
 
         </section>
