--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Yash Rachhadiya" width="80">
         </figure>
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Yash Rachhadiya</h1>
+          <h1 class="name" title="Yash Rachhadiya">Yash Rachhadiya</h1>
           <p class="title">Web developer</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
@@ -103,45 +103,25 @@
     </aside>
 
     <div class="main-content">
-
-      <!--
-        - #NAVBAR
-      -->
-
+      <!-- navbar-->
       <nav class="navbar">
-
         <ul class="navbar-list">
-
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>About</button>
           </li>
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-
-
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
-
         </ul>
-
       </nav>
 
-
-
-
-
-      <!--
-        - #ABOUT
-      -->
-
+      <!-- About -->
       <article class="about  active" data-page="about">
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -168,16 +148,10 @@
         </section>
 
 
-        <!--
-          - service
-        -->
-
+        <!-- service -->
         <section class="service">
-
           <h3 class="h3 service-title">What i'm doing</h3>
-
           <ul class="service-list">
-
             <li class="service-item">
               <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg
@@ -189,7 +163,6 @@
                   The most modern and high-quality design made at a professional level.
                 </p>
               </div>
-
             </li>
 
             <li class="service-item">
@@ -954,26 +927,7 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="React">
-              <a href="https://job-board-gamma-ten.vercel.app/" target="_blank">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="./assets/images/job board.png" alt="arrival" loading="lazy">
-                </figure>
-                <h3 class="project-title">Job Board</h3>
-                <p class="project-category">
-                  Developed a job board with Tailwind CSS and React using Vite, featuring job cards and detailed views.
-                  The platform includes search filters by job position and location, and a feature to find jobs near the
-                  user's current location. While optimized for desktop, the site will be enhanced for mobile
-                  responsiveness soon.
-                  For the best experience, switch to landscape mode and enable
-                  "Desktop Site" mode on mobile for an
-                  optimal view
-                </p>
-              </a>
-            </li>
+
             <li class="project-item active" data-filter-item data-category="React">
               <a href="https://job-board-gamma-ten.vercel.app/" target="_blank">
                 <figure class="project-img">
