changes in portfolio

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                 </figure>
                 <h3 class="project-title">SaaS Landing Page</h3>
                 <p class="project-category">
-                  Description: The SaaS Landing Page Template is a modern, responsive design aimed at showcasing SaaS
+                  The SaaS Landing Page Template is a modern, responsive design aimed at showcasing SaaS
                   products and services effectively. This component, built with React and styled using Tailwind CSS,
                   serves as the hero section of a SaaS landing page, offering a compelling introduction to the product
                   with a visually appealing layout.
